[package]
name = "shade_runner"
version = "0.1.1"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
description = "Allows runtime hot loading of shaders for vulkano"
documentation = "https://docs.rs/shade_runner"
repository = "https://github.com/freesig/shade_runner"
readme = "README.md"
license = "MIT"
keywords = ["vulkan", "vulkano", "shaders", "hotloading"]

[dependencies.notify]
version = "4"

[dependencies.shaderc]
version = "0.6.1"

[dependencies.spirv-reflect]
version = "0.2"

[dependencies.vulkano]
version = "0.19.0"
#path = "../vulkano/vulkano"

[dev-dependencies.color-backtrace]
version = "0.1"

[dev-dependencies.difference]
version = "2"


